<resources>

    <string name="login_mail">Correo electrónico</string>
    <string name="login_pass">Su clave</string>

    <string name="app_name">MathQuizz</string>
    <string name="str_login">Ingresar</string>
    <string name="email_id">email id</string>
    <string name="password">password</string>
    <string name="login">Acceder</string>
    <string name="failed">La Autenticación ha fallado</string>
    <string name="image">image</string>
    <string name="create_a_new_account">Crea una nueva cuenta</string>


    <string name="sonido">Sonido</string>
    <string name="animaciones">Animaciones</string>
    <string name="suma">Suma</string>
    <string name="resta">Resta</string>
    <string name="multiplicacion">Multiplicación</string>
    <string name="division">División</string>
    <string name="grabar">Guardar</string>

    <string name="dificultad">Dificultad</string>
    <string name="facil">Nene de Mami</string>
    <string name="normal">Neurotipico</string>
    <string name="dificil">Bachiller</string>
    <string name="master">Licenciado</string>
    <string name="nerd">Nerd</string>
    <string name="mazo">Masoquista</string>

    <string name="sumas">Sumas</string>
    <string name="restas">Restas</string>
    <string name="multiplicacions">Multiplicaciones</string>
    <string name="divisions">Divisiones</string>
    <string name="correctas">Correctas</string>
    <string name="fallos">Falladas</string>

    <string name="volver">Volver</string>


    <!-- Home -->
    <string name="home_tab_xml">XML</string>
    <string name="home_tab_code">Code</string>

    <!-- Set Theme Dialog -->
    <string name="set_theme_dialog_title">Set Theme</string>
    <string name="set_theme_dialog_button_positive">Set Theme</string>
    <string name="set_theme_dialog_button_negative">Cancel</string>

    <!-- Material Theme Elements -->
    <string name="material_theme_red">Red</string>
    <string name="material_theme_orange">Orange</string>
    <string name="material_theme_lime">Lime</string>
    <string name="material_theme_green">Green</string>
    <string name="material_theme_teal">Teal</string>
    <string name="material_theme_blue">Blue</string>
    <string name="material_theme_purple">Purple</string>
    <string name="material_theme_current_theme">Current Theme</string>
    <string name="material_theme_green_theme">Green Theme</string>
    <string name="material_theme_blue_theme">Blue Theme</string>
    <string name="material_theme_buttons_raised">Buttons: Raised (Default)</string>
    <string name="material_theme_buttons_no_raise">Buttons: No Raise</string>
    <string name="material_theme_buttons_flat">Buttons: Flat</string>
    <string name="material_theme_default">Default</string>
    <string name="material_theme_colored">Colored</string>
    <string name="material_theme_colored_text">Colored Text</string>
    <string name="material_theme_selectable_items_rect">Selectable Items: Rectangle</string>
    <string name="material_theme_selectable_items_rounded_rect">Selectable Items: Rounded Rectangle</string>
    <string name="material_theme_text_fields">Text Fields</string>
    <string name="material_theme_radio_buttons">Radio Buttons</string>
    <string name="material_theme_checkboxes">Checkboxes</string>
    <string name="material_theme_switches">Switches</string>
    <string name="material_theme_spinners">Dropdown Spinners</string>
    <string name="material_theme_sliders">Sliders</string>
    <string name="material_theme_progress_indicators">Progress Indicators</string>
    <string name="material_theme_icons">Icons</string>
    <string name="material_theme_snackbars">Snackbars</string>
    <string name="material_theme_dialogs">Dialogs</string>
    <string name="material_theme_dialog_button_positive">Positive</string>
    <string name="material_theme_dialog_button_negative">Negative</string>

    <!-- Spinners -->
    <string name="spinner_item_1">One</string>
    <string name="spinner_item_2">Two</string>
    <string name="spinner_item_3">Three</string>
    <string name="spinner_item_4">Four</string>
    <string name="spinner_item_5">Five</string>

    <string-array name="spinner_items_array">
        <item>@string/spinner_item_1</item>
        <item>@string/spinner_item_2</item>
        <item>@string/spinner_item_3</item>
        <item>@string/spinner_item_4</item>
        <item>@string/spinner_item_5</item>
    </string-array>

    <!-- Snackbars -->
    <string name="snackbar_action">Action</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>


    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

</resources>
