<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SigInActivity">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_gravity="center|top"
        android:layout_marginBottom="20dp"
        android:visibility="gone"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context=".singin_activity">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:contentDescription="@string/image"
            android:layout_marginBottom="5dip"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:scaleType="fitCenter"
            android:src="@drawable/images" />


        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:autofillHints="@string/login_mail"
            android:hint="@string/email_id"
            android:inputType="textEmailAddress"
            style="@style/FirebaseUI.TextInputEditText.EmailField"/>


        <EditText
            android:id="@+id/password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:autofillHints="@string/login_pass"
            android:hint="@string/password"
            android:inputType="textPassword"
            style="@style/FirebaseUI.TextInputEditText.PasswordField" />

        <!-- Login Button -->
        <Button
            android:id="@+id/ah_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dip"
            android:text="@string/login"
            style="@style/Widget.AppCompat.Button.Colored" />

        <TextView
            android:gravity="center"
            android:id="@+id/sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dip"
            style="@style/FirebaseUI.Button"
            android:text="@string/create_a_new_account"
            android:textAllCaps="false"
            android:textSize="15sp" />

        <com.google.android.gms.common.SignInButton

            android:id="@+id/sign_in_google"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dip"
             />

    </LinearLayout>






</android.support.constraint.ConstraintLayout>