<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SettingsActivity"
    android:padding="8dip"
    android:background="@color/material_gray_200"
    >


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/colorPrimary"
        app:cardCornerRadius="2dp"
        app:cardElevation="2dp"
        app:cardPreventCornerOverlap="false"
        android:layout_marginTop="2dip">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dip">

            <Switch
                android:id="@+id/sw_sonido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dip"
                android:text="@string/sonido" />

            <Switch
                android:id="@+id/sw_animaciones"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dip"
                android:text="@string/animaciones" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/colorPrimary"
        app:cardCornerRadius="2dp"
        app:cardElevation="2dp"
        app:cardPreventCornerOverlap="false"
        android:layout_marginTop="8dip">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dip">


             <RadioGroup
                android:id="@+id/rd_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                 <RadioButton
                    android:id="@+id/rd_suma"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dip"
                    android:layout_weight="1"
                    android:text="@string/suma" />

                  <RadioButton
                    android:id="@+id/rd_resta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dip"
                    android:layout_weight="1"
                    android:text="@string/resta" />

                  <RadioButton
                    android:id="@+id/rd_multiplicacion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dip"
                    android:layout_weight="1"
                    android:text="@string/multiplicacion" />

                  <RadioButton
                    android:id="@+id/rd_division"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dip"
                    android:layout_weight="1"
                    android:text="@string/division" />
             </RadioGroup>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dip"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        app:cardCornerRadius="2dp"
        app:cardElevation="2dp"
        app:cardPreventCornerOverlap="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dip">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dip"
                android:text="@string/dificultad" />

            <SeekBar
                android:id="@+id/dificultad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="5"
                android:progress="1" />

            <TextView
                android:id="@+id/txt_dificultad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />


            <Button
                android:id="@+id/btn_grabar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dip"
                android:text="@string/grabar"
                android:theme="@style/Widget.AppCompat.Button.Colored" />
        </LinearLayout>

    </android.support.v7.widget.CardView>


</LinearLayout>